--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch": "webpack --watch",
-    "start": "webpack-dev-server --open --config webpack.dev.js",
+    "start": "cross-env NODE_ENV=development webpack-dev-server -p --progress --config=webpack.dev.js --mode development",
     "server": "node server.js",
-    "build": "webpack --config webpack.prod.js"
+    "build": "cross-env NODE_ENV=production webpack -p --progress --config=webpack.prod.js --mode production"
   },
   "keywords": [],
   "author": "21joint-team",
@@ -19,25 +19,35 @@
     "@babel/plugin-transform-runtime": "^7.1.0",
     "@babel/preset-env": "^7.1.6",
     "autoprefixer": "^9.3.1",
+    "babel-eslint": "^10.0.1",
     "babel-loader": "^8.0.4",
     "clean-webpack-plugin": "latest",
     "cross-env": "^5.2.0",
     "css-loader": "^1.0.1",
     "express": "latest",
+    "glob-all": "^3.1.0",
     "html-loader": "^0.5.5",
-    "html-webpack-plugin": "latest",
+    "html-webpack-plugin": "^4.0.0-beta.4",
     "mini-css-extract-plugin": "^0.4.4",
     "node-sass": "^4.10.0",
+    "optimize-css-assets-webpack-plugin": "^5.0.1",
     "postcss-flexbugs-fixes": "^4.1.0",
     "postcss-loader": "^3.0.0",
+    "purgecss-webpack-plugin": "^1.3.1",
+    "purify-css": "^1.2.5",
+    "purifycss-webpack": "^0.7.0",
     "sass-loader": "^7.1.0",
-    "webpack": "^4.25.1",
+    "uglifyjs-webpack-plugin": "latest",
+    "url-loader": "^1.1.2",
+    "webpack": "^4.26.0",
     "webpack-cli": "^3.1.2",
     "webpack-dev-middleware": "latest",
     "webpack-dev-server": "^3.1.10",
     "webpack-merge": "latest"
   },
   "dependencies": {
+    "@babel/polyfill": "^7.0.0",
+    "bootstrap": "^4.1.3",
     "lodash": "^4.17.11"
   }
 }
